Update JWT auth: roles, permissions, and logging improvements